--- a/app/index.html
+++ b/app/index.html
@@ -39,10 +39,12 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/">Login</a></li>
+              <li><a ng-href="#/sectors">Sectors</a></li>
             </ul>
+            <form class="navbar-form navbar-left" ng-controller="mainBarController">
+              <button type="button" class="btn btn-default" ng-click="logoutFunc()">Logout</button>
+            </form>
           </div>
         </div>
       </div>
@@ -81,13 +83,16 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
+    
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+       
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/sectors.js"></script>
         <!-- endbuild -->
 </body>
 </html>
