--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="styles/theme/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/theme/bootstrap-theme.min.css">
   </head>
   <body ng-app="deskappApp">
     <!--[if lt IE 7]>
