--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/sectors.js"></script>
+        <script src="scripts/controllers/actions.js"></script>
+        <script src="scripts/controllers/documents.js"></script>
+        <script src="scripts/controllers/mafia.js"></script>
         <!-- endbuild -->
 </body>
 </html>
