--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,9 @@
   </head>
   <body ng-app="deskappApp">
     
-    <div ng-include="'views/headerGame.html'"></div>
-    <div ng-include="'views/navbar.html'" ng-show="true"></div>
+    <div ng-show="gameBar" ng-include="'views/headerGame.html'"></div>
+    <div ng-show="!gameBar" ng-include="'views/headerLogin.html'"></div>
+    <div ng-show="gameBar" ng-include="'views/navbar.html'" ng-show="true"></div>
 
     <!-- Add your site or application content here -->
     <!--<div class="header">
