--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
         <script src="scripts/controllers/actions.js"></script>
         <script src="scripts/controllers/documents.js"></script>
         <script src="scripts/controllers/mafia.js"></script>
+        <script src="scripts/controllers/navigation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
