--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="styles/theme/bootstrap.css">
-    <link rel="stylesheet" href="styles/theme/bootstrap-theme.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/bootstrap-theme.css">
     
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--    <link rel="stylesheet" href="css/leaflet.extra-markers.css">-->
