add progress bar

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--    <link rel="stylesheet" href="css/leaflet.extra-markers.css">-->
    <link rel="stylesheet" href="css/leaflet.css">
+   <link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css">
     
   </head>
   <body ng-app="deskappApp">
@@ -87,6 +88,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
+    <script src="bower_components/ngprogress/build/ngProgress.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
