--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
+    <script src="bower_components/ngprogress/build/ngProgress.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
