--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
    <link rel="stylesheet" href="css/leaflet.extra-markers.css">
    <link rel="stylesheet" href="css/leaflet.css">
-   <link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css">
+   <link rel="stylesheet" href="css/ngProgress.css">
     
   </head>
   <body ng-app="deskappApp">
