--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <script src="bower_components/ngprogress/build/ngProgress.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -101,6 +102,7 @@
 
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="js/angular-round-progress-directive.js"></script>
+    <script src="js/angular-bootstrap-lightbox.js"></script>
 
     <script src="js/leaflet.extra-markers.js"></script>
     <!--
