--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <script src="bower_components/ngprogress/build/ngProgress.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
