Ajout de la directive ngAudio

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
     <script src="bower_components/ngprogress/build/ngProgress.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
+    <script src="bower_components/angular-audio/app/angular.audio.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
