add list players

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/controllers/mafia.js"></script>
     <script src="scripts/controllers/map.js"></script>
     <script src="scripts/controllers/navigation.js"></script>
+    <script src="scripts/controllers/player.js"></script>
     <!-- endbuild -->
   </body>
 </html>
